--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -69,4 +69,30 @@ jobs:
           name: Code-Coverage-Result
           path: coverage
           retention-days: 5
-          
+
+    docker:
+      name: containerization
+      needs: [unit-testing, code-coverage]
+      permissions: 
+        packages: write
+      runs-on: ubuntu-latest
+
+      steps:
+
+      - name: checkout repo
+        uses: actions/checkout@v4
+
+      - name: Docker Login
+        uses: docker/login-action@v2.2.0
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: GHCR Build and Push
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          push: true
+          tags: ghcr.io/${{ github.repository_owner }}/solar-system:${{ github.sha }}
+
