--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -98,6 +98,33 @@ jobs:
           push: true
           tags: ghcr.io/${{ github.repository_owner }}/solar-system:${{ github.sha }}
 
+    dev-deploy:
+      name: Dev Deployment
+      runs-on: ubuntu-latest
+      needs: docker
+      environment: 
+        name: development
+      steps:
+        - name: Checkout repo
+          uses: actions/checkout@v4
+
+        - name: Install kubectl
+          uses: azure/setup-kubectl@v3
+          with:
+            version: 'v1.26.0'
+
+        - name: Set kubecontext
+          uses: azure/k8s-set-context@v4
+          with:
+            method: kubeconfig
+            kubeconfig: ${{ secrets.KUBECONFIG }}
+
+        - name: Check kubectl version
+          run: |
+            kubectl version --short -o yaml
+
+        
+
           
 
 
